k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indooro-backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: it220209.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: indooro-backend
                port:
                  number: 8080
